# okapi

./: Cargo.toml
examples/custom_schema/: Cargo.toml
examples/dyn_templates/: Cargo.toml
examples/json-web-api/: Cargo.toml
examples/nested/: Cargo.toml
examples/openapi_attributes/: Cargo.toml
examples/raw_identifiers/: Cargo.toml
examples/secure_request_guard/: Cargo.toml
examples/special-types/: Cargo.toml
examples/streams/: Cargo.toml
examples/uuid_usage/: Cargo.toml
examples/websocket/: Cargo.toml
rocket-okapi/: Cargo.toml
rocket-okapi-codegen/: Cargo.toml
rocket-okapi-codegen/src/openapi_attr/: route_attr.rs
rocket-okapi/src/: gen.rs  lib.rs  settings.rs
rocket-okapi/src/response/: responder_impls.rs
