[package]
name = "special-types"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { git = "https://github.com/rwf2/Rocket", rev = "f50b604", default-features = false, features = [
	"json",
] }
rocket_okapi = { path = "../../rocket-okapi", features = [
	"swagger",
	"rapidoc",
] }
serde = "1.0"
